@@ -73,6 +73,7 @@ LT.Laethys = {
 			Flare = KBM.Defaults.AlertObj.Create("cyan"),
 			LiqGold = KBM.Defaults.AlertObj.Create("yellow"),
 			TGold = KBM.Defaults.AlertObj.Create("purple"),
+			--TGoldWarn = KBM.Defaults.AlertObj.Create("dark_grey"),
 		 },
 	}
 }
@@ -147,6 +148,7 @@ LT.Lang.Buff.Wisdom:SetRussian("Мудрость прорицателя")
 -- Debuff Dictionary
 LT.Lang.Debuff = {}
 LT.Lang.Debuff.Gold = KBM.Language:Add("Touch of Gold")
+--LT.Lang.Debuff.TGold = KBM.Language:Add("Use ability soon!")
 
 -- Notify Dictionary
 LT.Lang.Notify = {}
@@ -183,6 +185,7 @@ LT.Lang.Menu.Adds:SetFrench("Premier Pop des Adds")
 LT.Lang.Menu.Adds:SetRussian("Первые Адды")
 LT.Lang.Menu.LiqGold = KBM.Language:Add("First Laethic Gold")
 LT.Lang.Menu.LiqGold:SetGerman("Erste Laethic-Gold")
+--LT.Lang.Menu.TGold = KBM.Language:Add("Touch of Gold 5 second warning")
 
 LT.Laethys.Name = LT.Lang.Unit.Laethys[KBM.Lang]
 LT.Laethys.NameShort = LT.Lang.Unit.Laethys[KBM.Lang]
@@ -413,6 +416,9 @@ function LT:Start()
 	self.Laethys.AlertsRef.Orb = KBM.Alert:Create(self.Lang.Ability.Orb[KBM.Lang], nil, false, true, "dark_green")
 	self.Laethys.AlertsRef.Flare = KBM.Alert:Create(self.Lang.Ability.Flare[KBM.Lang], nil, false, true, "cyan")
 	self.Laethys.AlertsRef.TGold = KBM.Alert:Create(self.Lang.Debuff.Gold[KBM.Lang], nil, false, true, "purple")
+	--self.Laethys.AlertsRef.TGoldWarn = KBM.Alert:Create(self.Lang.Debuff.TGold[KBM.Lang], 5, false, true, "dark_grey")
+	--self.Laethys.AlertsRef.TGold:AddAlert(self.Laethys.AlertsRef.TGoldWarn, 5)
+	--self.Laethys.AlertsRef.TGold.MenuName = self.Lang.Menu.TGold[KBM.Lang]
 	-- Phase Two
 	self.Laethys.AlertsRef.LiqGold = KBM.Alert:Create(self.Lang.Ability.LiqGold[KBM.Lang], 5, true, true, "yellow")
 	self.Laethys.TimersRef.LiqGoldFirst:AddAlert(self.Laethys.AlertsRef.LiqGold, 5)
